--- a/MyCalendarDemo/res/layout/calendar_main.xml
+++ b/MyCalendarDemo/res/layout/calendar_main.xml
@@ -57,6 +57,7 @@
         >
         
     </ListView>
+    
     <ImageView 
         android:id="@+id/iv"
         android:layout_height="wrap_content"
@@ -66,5 +67,54 @@
 		android:layout_alignParentBottom="true"
 		android:src="@drawable/ic_launcher"
         />
+    
+    <EditText android:gravity="top" 
+        android:id="@+id/add_event_content" 
+        android:background="@drawable/add_event_edit_bg"
+        android:paddingLeft="9.0dip" 
+        android:paddingTop="6.0dip"
+        android:minLines="5"
+        android:layout_width="fill_parent" 
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4.0dip" 
+        android:layout_marginRight="4.0dip" 
+        android:hint="@string/writeit" 
+        android:layout_below="@id/lly"
+         />
+
+        <ImageButton
+            android:id="@+id/b_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/add_event_content"
+            android:layout_below="@+id/add_event_content"
+            android:background="@drawable/back_btn_bg"
+            android:contentDescription="date"
+            android:src="@drawable/ic__date" />
+
+        <ImageButton
+            android:id="@+id/b_alarm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/b_date"
+            android:layout_marginLeft="16dp"
+            android:layout_toRightOf="@+id/b_date"
+            android:background="@drawable/back_btn_bg"
+            android:contentDescription="alarm"
+            android:src="@drawable/ic__alarm" />
+
+        <TextView
+            android:id="@+id/save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/b_alarm"
+            android:layout_alignRight="@+id/add_event_content"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/btn__default"
+            android:gravity="center"
+            android:paddingLeft="5.0dip"
+            android:paddingRight="5.0dip"
+            android:text="@string/activity_add_event_save"
+            android:textSize="18.0sp" />
     
 </RelativeLayout>
