--- a/MyCalendarDemo/res/layout/calendar_main.xml
+++ b/MyCalendarDemo/res/layout/calendar_main.xml
@@ -13,31 +13,57 @@
 
         <TextView
             android:id="@+id/Top_Date"
-            android:layout_width="150dip"
+            android:layout_width="120dip"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center_horizontal|center"
             android:textColor="#424139"
             android:textSize="19sp"
             android:textStyle="bold" />
-
+        
         <Button
-            android:id="@+id/btn_pre_month"
-            android:layout_width="wrap_content"
+            android:id="@+id/search"
+            android:layout_width="50dip"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="15dip"
+            android:text="@string/search"
+            android:background="@drawable/btn__default"
+            android:textSize="18sp"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/btn_pre_month"
+            android:layout_width="15dip"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="75dip"
             android:background="@drawable/previous_month" />
 
         <Button
             android:id="@+id/btn_next_month"
-            android:layout_width="wrap_content"
+            android:layout_width="15dip"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="75dip"
             android:background="@drawable/next_month" />
+        
+        <Button
+            android:id="@+id/setting"
+            android:layout_width="50dip"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dip"
+            android:text="@string/setting"
+            android:background="@drawable/btn__default"
+            android:textSize="18sp"
+            android:textColor="#FFFFFF"
+             />
+        
     </RelativeLayout>
 	
     <LinearLayout
@@ -68,19 +94,19 @@
 		android:src="@drawable/ic_launcher"
         />
     
-    <EditText android:gravity="top" 
-        android:id="@+id/add_event_content" 
-        android:background="@drawable/add_event_edit_bg"
-        android:paddingLeft="9.0dip" 
-        android:paddingTop="6.0dip"
-        android:minLines="5"
-        android:layout_width="fill_parent" 
+    <EditText
+        android:id="@+id/add_event_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4.0dip" 
-        android:layout_marginRight="4.0dip" 
-        android:hint="@string/writeit" 
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@id/lly"
-         />
+        android:background="@drawable/add_event_edit_bg"
+        android:gravity="top"
+        android:hint="@string/writeit"
+        android:minLines="5"
+        android:paddingLeft="9.0dip"
+        android:paddingTop="6.0dip" />
 
         <ImageButton
             android:id="@+id/b_date"
