添加按钮变色

--- a/MyCalendarDemo/res/layout/calendar_main.xml
+++ b/MyCalendarDemo/res/layout/calendar_main.xml
@@ -89,9 +89,9 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:contentDescription="@string/addview"
-        android:layout_alignParentRight="true" 
+        android:layout_centerHorizontal="true"
 		android:layout_alignParentBottom="true"
-		android:src="@drawable/ic_launcher"
+		android:background="@drawable/button__default"
         />
     
     <EditText
