--- a/MyCalendarDemo/res/layout/calendar_main.xml
+++ b/MyCalendarDemo/res/layout/calendar_main.xml
@@ -122,8 +122,6 @@
             android:id="@+id/b_alarm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/add_event_content"
-            android:layout_below="@+id/add_event_content"
             android:background="@drawable/back_btn_bg"
             android:contentDescription="date"
             android:src="@drawable/ic__alarm" />
@@ -152,5 +150,11 @@
             android:contentDescription="alarm" />
 
     </RelativeLayout>
+    <ListView 
+        android:id="@+id/alarmlist"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        
+    </ListView>
    </LinearLayout>
 </RelativeLayout>
