--- a/MyCalendarDemo/res/layout/item_events.xml
+++ b/MyCalendarDemo/res/layout/item_events.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:background="@drawable/events_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
+<LinearLayout android:background="@drawable/events_item_bg" 
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content"
   xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView android:textColor="#ffb80000" 
         android:id="@+id/time" 
