--- a/MyCalendarDemo/res/layout/lay2.xml
+++ b/MyCalendarDemo/res/layout/lay2.xml
@@ -5,5 +5,11 @@
     android:orientation="vertical"
     android:background="#FF8684" >
     
+    <ListView 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/plan">
+    </ListView>
+    
 
 </LinearLayout>
