--- a/MyCalendarDemo/res/layout/lay1.xml
+++ b/MyCalendarDemo/res/layout/lay1.xml
@@ -3,5 +3,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="#158684" >
+    android:background="#FFFFFF"
+    >
+    <ListView 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/memo">
+    </ListView>
 </LinearLayout>
