--- a/MyCalendarDemo/res/layout/calendar_main.xml
+++ b/MyCalendarDemo/res/layout/calendar_main.xml
@@ -113,7 +113,12 @@
         android:paddingLeft="9.0dip"
         android:paddingTop="6.0dip" 
         android:layout_weight="1.0"/>
-
+ 	<ListView 
+        android:id="@+id/alarmlist"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        
+    </ListView>
     <RelativeLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
