--- a/MyCalendarDemo/res/layout/time_layout.xml
+++ b/MyCalendarDemo/res/layout/time_layout.xml
@@ -5,8 +5,19 @@
 	android:layout_width="fill_parent"
 	android:layout_marginTop="12dp"
 	android:orientation="vertical"
-	android:background="@drawable/layout_bg">
+	android:background="#c0c0c0"
+	>
 	
+     <TextView 
+        android:textSize="18.0sp" 
+        android:layout_gravity="center_horizontal" 
+        android:id="@+id/title" 
+        android:paddingTop="4.0dip" 
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content" 
+        android:textColor="#FFFFFF"
+        android:text="@string/settime"/>
+     
 	<LinearLayout  
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
@@ -15,12 +26,14 @@
 		android:paddingRight="12dp"
 		android:paddingTop="20dp">
 	  
+	    
 	  	<com.calendar.demo.view.widget.WheelView android:id="@+id/hour"
 			android:layout_height="wrap_content"
 			android:layout_width="60dp"/>
 		<com.calendar.demo.view.widget.WheelView android:id="@+id/mins"
 			android:layout_height="wrap_content"
 			android:layout_width="60dp"/>
+		
 	</LinearLayout>
 		
     <LinearLayout 
