--- a/MyCalendarDemo/res/layout/calendar_main.xml
+++ b/MyCalendarDemo/res/layout/calendar_main.xml
@@ -8,12 +8,12 @@
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
-        android:layout_height="40dip"
+        android:layout_height="wrap_content"
         android:background="@drawable/title" >
 
         <TextView
             android:id="@+id/Top_Date"
-            android:layout_width="120dip"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center_horizontal|center"
@@ -23,7 +23,7 @@
         
         <Button
             android:id="@+id/search"
-            android:layout_width="50dip"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="95dip"
+            android:layout_marginLeft="90dip"
             android:background="@drawable/prev_month" />
 
         <Button
@@ -47,12 +47,12 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="95dip"
+            android:layout_marginRight="90dip"
             android:background="@drawable/next_month" />
         
         <Button
             android:id="@+id/setting"
-            android:layout_width="50dip"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
@@ -63,7 +63,7 @@
              />
         
     </RelativeLayout>
-	
+
     <!-- 日历主体 -->
     <LinearLayout
         android:id="@+id/lly"
@@ -145,7 +145,7 @@
             android:text="@string/Cancel"
             android:textColor="#000000"
             android:textSize="18.0sp" />
-		
+
         <TextView
             android:id="@+id/save"
             android:layout_width="wrap_content"
