--- a/MyCalendarDemo/res/layout/citem_events.xml
+++ b/MyCalendarDemo/res/layout/citem_events.xml
@@ -2,17 +2,14 @@
 <LinearLayout 
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
-    android:background="@drawable/events_item_bg"
+    android:background="#ECE5F1"
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView android:textColor="#ffb80000" 
-        android:id="@+id/time" 
-        android:layout_width="wrap_content" 
-        android:layout_height="wrap_content" />
+   
     <TextView android:textSize="17.0sp" 
         android:textColor="@color/default_text_color" 
         android:layout_gravity="center_vertical" 
         android:id="@+id/text"
-        android:layout_width="0.0dip" 
+        android:layout_width="0.0dp" 
         android:layout_height="wrap_content" 
         android:layout_weight="1.0" />
 </LinearLayout>
