--- a/MyCalendarDemo/res/layout/pop_up_date.xml
+++ b/MyCalendarDemo/res/layout/pop_up_date.xml
@@ -102,12 +102,14 @@
             android:layout_width="wrap_content"
             android:text="@string/Cancel"
             android:id="@+id/date_cancel"
+            android:background="@drawable/cancel_btn__default"
             />
         <Button 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/date_ok"
-            android:text="@string/set"/>
+            android:text="@string/set"
+            android:background="@drawable/btn__default"/>
     </LinearLayout>
     
 </LinearLayout>
