--- a/MyCalendarDemo/res/layout/calendar_main.xml
+++ b/MyCalendarDemo/res/layout/calendar_main.xml
@@ -65,21 +65,36 @@
     </RelativeLayout>
 
     <!-- 日历主体 -->
-    <LinearLayout
-        android:id="@+id/lly"
-        android:layout_width="match_parent"
+    
+    <ViewFlipper 
+        android:id="@+id/viewflipper"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/relativeLayout1"
-        android:orientation="vertical" >
-        
-    </LinearLayout>
-
+        android:layout_below="@id/relativeLayout1">
+	        
+	    <LinearLayout
+	        android:id="@+id/lly"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical" >
+	        
+	    </LinearLayout>
+		
+	    <LinearLayout 
+	        android:id="@+id/llynext"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical">
+	        
+	    </LinearLayout>	    
+	    
+    </ViewFlipper>
 
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lly"
+        android:layout_below="@id/viewflipper"
         >
         
     </ListView>
@@ -98,7 +113,7 @@
        android:id="@+id/addnote"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
-       android:layout_below="@+id/lly"
+       android:layout_below="@+id/viewflipper"
        android:orientation="vertical">
     <EditText
         android:id="@+id/add_event_content"
@@ -187,7 +202,7 @@
    <LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@id/lly"
+    android:layout_below="@id/viewflipper"
     android:orientation="vertical" >
 
     <LinearLayout
