--- a/MyCalendarDemo/res/drawable-hdpi/add_default.xml
+++ b/MyCalendarDemo/res/drawable-hdpi/add_default.xml
@@ -2,6 +2,6 @@
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" 
-        android:drawable="@drawable/btn__default__press" />
-    <item android:drawable="@drawable/btn__default__normal" />
+        android:drawable="@drawable/add_press" />
+    <item android:drawable="@drawable/add_normal" />
 </selector>
