--- a/MyCalendarDemo/res/layout/addnote.xml
+++ b/MyCalendarDemo/res/layout/addnote.xml
@@ -4,7 +4,44 @@
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
+       android:background="#FFFFFF"
        android:orientation="vertical">
+       <ImageView 
+           android:layout_height="wrap_content"
+           android:layout_width="fill_parent"
+           android:background="@drawable/huixian"/>
+       <LinearLayout 
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+           
+           <ImageView 
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:id="@+id/back"
+               android:background="@drawable/add_default">
+               
+           </ImageView>
+
+           <TextView
+               android:id="@+id/text"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="@string/add"
+               android:layout_gravity="center" />
+
+       </LinearLayout>
+       <ImageView 
+           android:layout_height="wrap_content"
+           android:layout_width="fill_parent"
+           android:background="@drawable/huixian"/>
+       
+       <TextView
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:id="@+id/date"
+           android:text="@string/date"></TextView>
+       
     <EditText
         android:id="@+id/add_event_content"
         android:layout_width="fill_parent"
